Updating instructions in the README file

--- a/App.desktop
+++ b/App.desktop
@@ -2,4 +2,4 @@
 Type=Application
 Terminal=true
 Name=App
-Exec=/home/piyush/Desktop/EMP_506/start_all.sh
+Exec= ~/Desktop/abw_dashboard_server/start_all.sh
