--- a/App.desktop
+++ b/App.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Type=Application
 Terminal=true
-Name=App
-Exec= ~/Desktop/abw_dashboard_server/start_all.sh
+Name=ABW Dashboard
+Exec=bash -c 'cd "$(dirname "%k")" && ./start_all.sh'
+Path=%k
