Updating path in the App.desktop file

--- a/App.desktop
+++ b/App.desktop
@@ -2,5 +2,4 @@
 Type=Application
 Terminal=true
 Name=ABW Dashboard
-Exec=bash -c 'cd "$(dirname "%k")" && ./start_all.sh'
-Path=%k
+Exec=bash -c 'cd "$HOME/Desktop/abw_dashboard_server" && ./start_all.sh'
